<resources>
    <string name="app_name">yenchenapp</string>
    <string name="send">發送</string>
    <string name="exitroom">確定要狠心離開聊天室？</string>
    <string name="login">登入</string>
    <string name="remember">記住我</string>
    <string name="logout">登出</string>
    <string name="select_album">從相簿中選擇</string>
    <string name="shot">拍照</string>
    <string name="Sign_up">註冊會員</string>
    <string name="send2">送出</string>
    <string name="sereach">搜尋</string>
    <string name="personal">個人</string>
    <string name="mainpage">首頁</string>
    <string name="recommend">熱門推薦</string>
    <string name="search_result">搜尋結果</string>
    <string name="password">密碼</string>
    <string name="nickname">暱稱</string>
    <string name="account">帳號</string>
    <string name="input_message">輸入訊息</string>
</resources>